# ontario-tenancy-assistant

./: .gitignore  README.md  REFACTORING_PLAN.md  UNUSED_CODE_ANALYSIS.md  config.py  main.py  pyproject.toml  test.py
data/: config.py  parse_document.py
data/output/: parsed_output.json  parsed_output_clean.json  parsed_output_final.json
data/parsers/: __init__.py  docx_parser.py  enhancer.py  post_processor.py
docs/: 06r17_e.docx
rag/: README.md  __init__.py  chat.py  config.py  langchain_query.py  test_embeddings.py  test_langchain.py
rag/langchain/: README.md  __init__.py  chains.py  contract_graph.py  embeddings.py  graph.py  self_check.py  vectorstore.py
rag/scripts/: flatten_for_rag.py  query_example.py  upsert_to_pinecone.py
scripts/: flatten_for_rag.py  query_example.py  upsert_to_pinecone.py
scripts/output/: rag_ready.json
src/: __init__.py
src/api/: __init__.py  routes.py
src/core/: __init__.py  embeddings.py  llm.py  qa.py  retriever.py  vectorstore.py
src/db/: config.py
src/langchain/: __init__.py  chains.py  contract_graph.py  rag_graph.py
src/models/: user.py
src/routes/: user.py
src/schemas/: user.py
src/services/users/: user.py
src/web/: CONTRACT_ANALYSIS.md  __init__.py  api_routes.py  app.py  chainlit_handlers.py  config.py
src/web/handlers/: __init__.py  chat_handlers.py  file_handlers.py
src/web/services/: __init__.py  rag_service.py
